swift/ql/test/extractor-tests/errors/Errors.ql
import swift
import TestUtils

from Locatable e
where e instanceof ErrorElement and toBeTested(e)
select e, e.getPrimaryQlClasses()
